@@ -1,3 +1,8 @@
+2020-09-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/webp.c (ReadWEBPImage): Use SetImageProfile() rather than
+	AppendImageProfile().
+
 2020-09-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* wand/magick_wand.c (MagickSetSamplingFactors): Correct
